[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://art/backdrop.png" type="Texture" id=3]
[ext_resource path="res://sounds/mischief-maker-by-kevin-macleod-from-filmmusic-io.ogg" type="AudioStream" id=4]
[ext_resource path="res://novem___.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sounds/escape.wav" type="AudioStream" id=6]
[ext_resource path="res://art/life_1.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 563.274, -35.2829, 14.1421, -20.5061, -14.1421, 20.5061, 560.446, 34.0136, 18.3848, -3.53553, -18.3848, 3.53553, 481.957, 65.8334, 30.4056, -4.94975, -30.4056, 4.94975, 317.908, 80.6826, 12.0208, -24.7487, -12.0208, 24.7487, 55.5716, 120.281, -9.19239, -49.4975, 9.19239, 49.4975, 40.7224, 204.426, 0, 0, 0, 0, 186.386, 236.246, -31.1127, -4.24264, 31.1127, 4.24264, 489.028, 211.497, -2.12132, -31.8198, 2.12132, 31.8198, 585.195, 244.731, 40.3051, -16.9706, -40.3051, 16.9706, 535.697, 304.128, 31.8198, -9.19239, -31.8198, 9.19239, 512.363, 448.378 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 44.2579, -39.5255, -14.1421, -26.163, 14.1421, 26.163, 52.7432, 30.4781, -22.6274, -2.12132, 22.6274, 2.12132, 183.558, 77.1471, -41.0122, -0.707107, 41.0122, 0.707107, 375.891, 45.3273, -19.0919, -16.9706, 19.0919, 16.9706, 515.191, 77.8542, 0.707107, -37.4767, -0.707107, 37.4767, 582.366, 160.586, 55.8614, -17.6777, -55.8614, 17.6777, 523.676, 232.711, 0, 0, 0, 0, 339.121, 212.204, 41.7193, -6.36396, -41.7193, 6.36396, 155.981, 186.749, -55.1543, -62.2254, 55.1543, 62.2254, 100.119, 281.501, 0, 0, 0, 0, 2.53857, 419.387 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 55.4258, -56.8574, 0, -15.8919, 0, 15.8919, 57.5447, 52.797, -14.8325, -25.4271, 14.8325, 25.4271, 72.9069, 158.743, -27.0163, 1.58919, 27.0163, -1.58919, 161.902, 222.841, -12.7136, 28.6055, 12.7136, -28.6055, 255.664, 162.981, -12.7136, 20.6595, 12.7136, -20.6595, 265.729, 65.5105, -15.8919, -0.529732, 15.8919, 0.529732, 357.373, 22.6023, -18.5406, -16.9514, 18.5406, 16.9514, 459.611, 41.1429, -13.773, -41.3191, 13.773, 41.3191, 506.227, 115.305, 5.29732, -32.3136, -5.29732, 32.3136, 520.53, 179.933, 27.546, -69.3948, -27.546, 69.3948, 471.265, 290.646, 0, 0, 0, 0, 563.438, 414.074 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 554.433, -56.8575, -2.64866, -34.4325, 2.64866, 34.4325, 526.357, 53.3267, -5.29732, -39.7299, 5.29732, 39.7299, 576.682, 114.776, 24.8974, -25.9568, -24.8974, 25.9568, 558.671, 200.062, 41.8488, 45.0272, -41.8488, -45.0272, 415.643, 238.203, 0, 0, 0, 0, 389.157, 141.792, 33.9028, 37.6109, -33.9028, -37.6109, 399.751, 46.9699, 22.2487, -23.3082, -22.2487, 23.3082, 274.205, 51.2078, -5.82705, -27.546, 5.82705, 27.546, 250.367, 132.257, 19.0703, -37.0812, -19.0703, 37.0812, 277.913, 226.019, 29.1352, 32.3136, -29.1352, -32.3136, 176.734, 247.738, 21.719, 43.9677, -21.719, -43.9677, 143.361, 102.592, 34.9623, -40.2596, -34.9623, 40.2596, 57.015, 57.5646, -11.6541, -38.1407, 11.6541, 38.1407, 44.3014, 174.105, -111.244, -76.2813, 111.244, 76.2813, 153.956, 410.366 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 364.121, 15.4545 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 4
outline_color = Color( 0.596078, 0, 0, 1 )
extra_spacing_char = 7
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
outline_size = 2
outline_color = Color( 0.152941, 0.152941, 0.152941, 1 )
extra_spacing_char = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 2
outline_color = Color( 0.537255, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 3 )

[node name="ToastHolder" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 328.827, 344.52 )

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="GhostPaths" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="GhostPaths"]
curve = SubResource( 1 )

[node name="Path2D2" type="Path2D" parent="GhostPaths"]
curve = SubResource( 2 )

[node name="Path2D3" type="Path2D" parent="GhostPaths"]
position = Vector2( 7.41629, -3.17839 )
curve = SubResource( 3 )

[node name="Path2D4" type="Path2D" parent="GhostPaths"]
position = Vector2( 9.53516, 0 )
curve = SubResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="DeathZone" type="Area2D" parent="." groups=[
"deathzone",
]]
position = Vector2( 514, 597 )
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( -176.783, -229.484 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.69
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -184.142
margin_top = 4.29806
margin_right = -4.14172
margin_bottom = 20.2981
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0.305882, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Score: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 3.70811
margin_top = 4.76758
margin_right = 159.708
margin_bottom = 44.7676
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="CanvasLayer/Lives"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_right = 28.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Life2" type="TextureRect" parent="CanvasLayer/Lives"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 32.0
margin_right = 60.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Life3" type="TextureRect" parent="CanvasLayer/Lives"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 64.0
margin_right = 92.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Life4" type="TextureRect" parent="CanvasLayer/Lives"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 96.0
margin_right = 124.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Life5" type="TextureRect" parent="CanvasLayer/Lives"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 128.0
margin_right = 156.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Pause" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause"]
pause_mode = 2
margin_left = 278.0
margin_top = 146.0
margin_right = 361.0
margin_bottom = 214.0

[node name="Resume" type="Button" parent="CanvasLayer/Pause/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Resume"

[node name="Menu" type="Button" parent="CanvasLayer/Pause/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Main Menu"

[node name="Quit" type="Button" parent="CanvasLayer/Pause/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Quit"

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="CanvasLayer/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOver/Center"]
margin_left = 184.0
margin_top = 124.0
margin_right = 456.0
margin_bottom = 236.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/GameOver/Center/VBoxContainer"]
margin_right = 272.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
align = 1

[node name="FinalScore" type="Label" parent="CanvasLayer/GameOver/Center/VBoxContainer"]
margin_top = 58.0
margin_right = 272.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 8 )
text = "Score:"
align = 1

[node name="Menu" type="Button" parent="CanvasLayer/GameOver/Center/VBoxContainer"]
margin_top = 92.0
margin_right = 272.0
margin_bottom = 112.0
text = "Main Menu"

[node name="Cheatcode" type="Label" parent="CanvasLayer/GameOver"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.419608, 0.419608, 0.419608, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_bottom = -76.0
custom_fonts/font = SubResource( 10 )
text = "Help Text"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/TutorialLabel"]

[node name="LeftLauncher" type="Position2D" parent="."]
position = Vector2( 10.0649, 349.623 )

[node name="RightLauncher" type="Position2D" parent="."]
position = Vector2( 627.732, 351.742 )

[node name="EscapeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_DeathZone_area_entered"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOver/Center/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
